# build-it-be

./: Dockerfile  README.md  docker-compose.yml  nginx_config.conf  pyproject.toml
admin-service/: Dockerfile  pyproject.toml
app/: main.py
auth-service/: Dockerfile  pyproject.toml
auth-service/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  utils.py
auth-service/app/core/: database.py  model.py
auth-service/app/dal/: auth_dal.py
auth-service/app/model/: auth.py
auth-service/app/routes/: auth.py
cart-service/: Dockerfile  pyproject.toml
gateway/: Dockerfile  pyproject.toml
gateway/app/: main.py
gateway/app/core/: auth.py  network.py  post_processing.py  route.py  settings.py
gateway/app/models/: users.py
orders/: main.py
payment-service/: pyproject.toml
product-service/: pyproject.toml
product-service/app/: main.py
product-service/app/core/: database.py  model.py  response.py
product-service/app/dal/: category.py  product.py
product-service/app/depedencies/: product.py
product-service/app/model/: category.py  image.py  product.py  spesifications.py
product-service/app/routes/: product.py
product-service/migrations/: env.py
seller-service/: pyproject.toml
users-service/: pyproject.toml
