[tool.poetry]
name = "cart-service"
version = "0.1.0"
description = ""
authors = ["Iman Nurohman <iman@gits.id>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
sqlmodel = "^0.0.8"
dotenv = "^0.0.5"
uvicorn = "^0.19.0"
alembic = "^1.8.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
httpx = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
