[tool.poetry]
name = "gateway"
version = "0.1.0"
description = ""
authors = ["Iman <imannurohman1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
hypercorn = "^0.14.3"
aiohttp = "^3.8.3"
pyjwt = "^2.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
