[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["Iman Nurohman <iman@gits.id>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.4"
fastapi = "^0.86.0"
sqlmodel = "^0.0.8"
alembic = "^1.8.1"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
hypercorn = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
