[tool.poetry]
name = "users-service"
version = "0.1.0"
description = ""
authors = ["Iman Nurohman <iman@gits.id>"]
readme = "README.md"
packages = [{include = "users_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
